[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runpod-serverless-supervisor"
version = "1.0.0"
description = "A tool for managing RunPod serverless model scheduling with Streamlit web interface"
authors = [{name = "Seungwoo Ryu"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "pandas",
    "python-dotenv",
    "requests",
    "pytz"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "utils*"]
exclude = ["config*", "images*", "template*"]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "isort",
    "pre-commit",
    "bandit[toml]",
    "detect-secrets"
]

[tool.ruff]
# Set the maximum line length to 88 (same as Black)
line-length = 88
target-version = "py38"

[tool.ruff.lint]
# Enable specific rule categories
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PIE", # flake8-pie
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
    "N806",  # Variable should be lowercase
]

# Exclude directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "runpod-serverless-supervisor",
    "*.egg-info",
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect existing line endings
skip-magic-trailing-comma = false
# Auto-detect line endings
line-ending = "auto"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | __pycache__
  | \.venv
  | venv
  | runpod-serverless-supervisor
  | \.egg-info
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bandit]
exclude_dirs = [
    "runpod-serverless-supervisor",
    "tests",
    ".venv",
    "venv"
]
skips = [
    "B101",  # Skip assert_used test
    "B601",  # Skip shell injection warnings for subprocess
    "B110",  # Skip try-except-pass (justified in our usage)
    "B404",  # Skip subprocess import warning
    "B607",  # Skip partial executable path (crontab is system command)
    "B603",  # Skip subprocess without shell (trusted system commands)
]
